# k-space

./: CHECKSUMS.sha256  CITATION.cff  LICENSE  Makefile  README.md  VALIDATION_CHECKS.md  prd_formalism_draft_v0p1.tex  pyproject.toml  requirements.txt  run_all_checks.py
Data_DY_test/: ATLAS_13.csv  ATLAS_7.csv  ATLAS_8.csv  CDF_RUN_1.csv  CDF_RUN_2.csv  CMS_13.csv  CMS_7.csv  CMS_8.csv  D0_RUN_1.csv  D0_RUN_2.csv  D0_RUN_2N.csv  E288_200.csv  E288_300.csv  E288_400.csv  E605.csv  E772.csv  LHCb_13.csv  LHCb_7.csv  LHCb_8.csv  PHENIX200.csv  STAR_510.csv
coefficient_sources/: README.md
docs/: formalism_note_v1p0.tex
outputs/latest/: kt_kcss_accuracy_ingredient_validator_output.json  kt_kcss_accuracy_ingredient_validator_report.txt  kt_kcss_accuracy_ingredient_validator_tests.csv  kt_kcss_binned_wterm_prototype_validator_output.json  kt_kcss_formalism_completion_validator_output.json  kt_kcss_formalism_completion_validator_tests.csv  kt_kcss_generator_convolution_validator_table.csv  (+20 more)
scripts/: stage_public_coefficients.sh
tools/: check_line_breaks.py
validators/: kt_kcss_accuracy_ingredient_validator.py  kt_kcss_binned_wterm_prototype_validator.py  kt_kcss_formalism_completion_validator.py  kt_kcss_generator_convolution_validator.py  kt_kcss_n3llprime_label_certificate_validator.py  kt_kcss_n3lo_matching_import_validator.py  kt_kcss_one_loop_evolution_validator.py  kt_kcss_one_loop_validator.py  kt_kcss_physical_coeff_import_validator.py  kt_kcss_running_coupling_evolution_validator.py  kt_kcss_toypdf_xconv_validator.py  kt_kcss_two_loop_ingredients_validator.py
(+24 files in other folders)
